# ML2-Exam

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: generate_Apkg-checkpoint.py
02 - Polynomial Regression - Splines/: Regression_Multi-Linear, Polynomial, and Splines.ipynb  multiple_answer_mcq.csv
03 - Regularization Methods for Regression/: multiple_answer_mcq.csv  single_answer_mcq.csv
09 - Random Forests/: RandomForests.ipynb
13 - MDS/: MDS.ipynb
15 - GMMs/: GMMs.ipynb
Anki/: ML2__Boosting.apkg  ML2__CNNs.apkg  ML2__DBSCAN.apkg  ML2__Ensemble Learning.apkg  ML2__GMMs.apkg  ML2__Logistic Regression.apkg  ML2__MDS.apkg  ML2__Multi-Linear,Polynomial and Splines.apkg  ML2__Multiple Linear Regression.apkg  ML2__Multiple_Linear_Regression_MCQ.apkg  ML2__Polynomial-Spline_Regression_MCQ.apkg  ML2__RNNs.apkg  ML2__Random Forests.apkg  ML2__Regularization Methods for Regression.apkg  ML2__SVM.apkg  ML2__UMAP.apkg
Exam Recap/: Answers.ipynb
Multiple Linear Regression/: ML2__Multiple_Linear_Regression_MCQ.apkg
MultipleLinearRegression/: multiple_answer_mcq.csv  single_answer_mcq.csv
Polinomial Regression - Splines/: ML2__Polynomial-Spline_Regression_MCQ.apkg  Regression_Multi-Linear, Polynomial, and Splines.ipynb  single_answer_mcq.csv
